FIX: sponsors logo width on small devices

--- a/src/Pages/Sponsors/Sponsors.module.scss
+++ b/src/Pages/Sponsors/Sponsors.module.scss
@@ -194,6 +194,9 @@
     width: 89vw;
     max-width: 89vw;
     margin-bottom: 2.25rem;
+    .brandItem {
+      height: 31vw;
+    }
   }
   .prevSponsorsheader {
     font-size: 1.25rem;
